# cpp_cmake_git_example

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: Hello.cpp  main.cpp
